--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
 BOT_TOKEN=8476144519:AAGeyM9h5eVzywGD8hVv6uH_KkYv5odEGW4
 ADMIN_ID=6185367393
-WEBHOOK_URL=
+WEBHOOK_URL=https://darnitsacash.netlify.app
